fix word-wrap for japanese

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -4,6 +4,7 @@ body {
 	font-size: 13px;
 	white-space: normal;
 	word-break: keep-all;
+	word-wrap: break-word;
 }
 
 .member {
